--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         let recognitionInProgress = false;
 
         // TRÈS IMPORTANT : REMPLACEZ CETTE URL PAR L'URL DE VOTRE APPLICATION FLASK SUR PYTHONANYWHERE
-        const FLASK_API_URL = "https://chachanne.pythonanywhere.com/process_audio"; // À MODIFIER
+        const FLASK_API_URL = "https://lux-assistant-backend.onrender.com/process_audio"; // À MODIFIER
 
         startButton.addEventListener('click', async () => {
             if (recognitionInProgress) return;
